--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "chart.js": "^2.9.4",
     "datatables.net": "^1.10.22",
     "datatables.net-bs4": "^1.10.22",
+    "debug": "^4.3.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "json-parse-better-errors": "^1.0.2",
     "list.js": "^1.5.0",
     "localforage": "^1.9.0",
-    "memory-cache": "^0.2.0"
+    "memory-cache": "^0.2.0",
+    "typescript-logger": "^2.0.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
