--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "bootstrap": "^4.5.2",
     "bootstrap-toggle": "^2.2.2",
     "chart.js": "^2.9.4",
-    "datatables.net": "^1.10.22",
     "datatables.net-bs4": "^1.10.22",
+    "datatables.net-responsive-bs4": "^2.2.6",
     "debug": "^4.3.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
