--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sakuna_fertilizer_helper",
   "description": "Sakuna: Of Rice and Ruin Fertilizer Helper",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "GPLv3",
   "repository": {
     "type": "git",
     "url": "https://github.com/furudbat/sakuna_fertilizer_helper.git"
@@ -34,6 +34,7 @@
     "@types/bootstrap-toggle": "^2.2.1",
     "@types/chart.js": "^2.9.28",
     "@types/datatables.net": "^1.10.19",
+    "@types/envify": "0.0.30",
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.13",
     "@types/json-parse-better-errors": "^1.0.0",
@@ -41,6 +42,7 @@
     "@types/localforage": "0.0.34",
     "@types/memory-cache": "^0.2.1",
     "@types/moment": "^2.13.0",
+    "@types/node": "^14.14.10",
     "bracket-template": "^1.1.4",
     "browser-pack-flat": "^3.4.2",
     "browserify": "^16.5.2",
