--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sakuna_fertilizer_helper",
+  "name": "lost_fertilizer_scrolls",
   "description": "Sakuna: Of Rice and Ruin Fertilizer Helper",
   "version": "0.1.0",
   "license": "GPLv3",
