--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -210,7 +210,7 @@ fertilizer_helper:
       armor_magic: Armor/Magic
       armor_magic_short: Armor/ Magic
 
-      immunity: Immunuity
+      immunity: Immunity
       immunity_short: Immu.
       pesticide: Pesticide
       pesticide_short: Pest.
