--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
   "files": [
     "./src/application.data.ts",
     "src/application.ts",
-    "src/application.impl.ts",
+    "src/application.ts",
     "./src/config.editor.ts",
     "./src/configs.ts",
     "./src/css.editor.ts",
