--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -86,6 +86,9 @@ guide:
     deep_flowing: >-
       <i class="fas fa-tint"></i> 
       Water: <strong>25-30% (Deep flowing, open both gates)</strong>
+    drain_open_gate: >-
+      <i class="fas fa-tint-slash"></i> 
+      Water: <strong>0%</strong> (keep release gate open)
   offshots_1_2:
     title: 1st/2nd Offshoots
     use_kernel_fertilizer: >-
@@ -158,7 +161,9 @@ guide:
     little_far_apart: 
       tab: Little far apart
       title: A little far apart
-      description: Leave 1 square space in between 2 seedling.
+      description: >-
+        Leave 1 square space in between 2 seedling.<br />
+        Try to spread the seedling in more of a rectangle (not just in ONE row and some seedling at the top), you can get balanced by mistake.
     balanced: 
       tab: Balanced
       title: Balanced
