update items update theme

--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -163,7 +163,7 @@ guide:
       title: A little far apart
       description: >-
         Leave 1 square space in between 2 seedling.<br />
-        Try to spread the seedling in more of a rectangle (not just in ONE row and some seedling at the top), you can get balanced by mistake.
+        <em>Try to spread the seedling in more of a rectangle (not just in ONE row and some seedling at the top), you can get balanced by mistake.</em>
     balanced: 
       tab: Balanced
       title: Balanced
@@ -236,6 +236,9 @@ fertilizer_helper:
       title: Recommended
     expiable:
       title: Expiable
+      in_days: In %life% day(s) <i class="fas fa-skull"></i>
+      in_days_unknown: In few day(s) <i class="fas fa-skull"></i>
+      infinity: <i class="fas fa-infinity"></i>
     remove_from_inventory: Remove from Inv.
     stats:
       leaf_fertilizer: 'L:'
@@ -259,6 +262,12 @@ fertilizer_helper:
       <span class="text-warning">* reach max value, you don't need to add more items for this stat to boost</span>
 item_list:
   title: Item-List
+  materials: 
+    title: Materials
+  ingredients: 
+    title: Ingredients
+  food: 
+    title: Food
 goto: go to
 footer: >-
   I'm not affiliated with <a href="http://sakunaofriceandruin.com/">Sakuna: Of Rice and Ruin</a>, this is a free fansite and makes no profit.
