--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -3,7 +3,7 @@ table:
     col_add_to_inventory: Inv.
     col_name: Name
 
-    col_fertilizer: Fertil.
+    col_fertilizer: Soil Nut.
 
     col_yield_hp: Yield/ HP
     col_taste_strength: Taste/ Str.
@@ -20,7 +20,7 @@ table:
 
     col_expiable: Exp.
   inventory:
-    col_add_to_fertilizer: Inv.
+    col_add_to_fertilizer: Fer.
     col_name: Name
 
     col_immunity: Imm.
@@ -194,9 +194,9 @@ fertilizer_helper:
     soil_nutrients:
       title: Soil nutrients
       current_fertilizer: Current Fertilizer
-      current_fertilizer_short: Curr. Fert.
+      current_fertilizer_short: <i class="fas fa-poop"></i>
       with_components: with Components
-      with_components_short: with Comp.
+      with_components_short: <i class="fas fa-poo"></i>
       leaf: Leaf
       kernel: Kernel
       root: Root
